@@ -132,9 +132,11 @@ Cacti CHANGELOG
 -issue#5382: Splice rrd could in some cases incorrectly detect the date and cause php errors
 -issue#5384: Untemplated Data Sources can fail to update due to lack of an assigned Graph
 -issue#5386: RRDCheck processes disabled hosts
--issue#5390: Fix SQL error when saving DS template 
+-issue#5390: Fix SQL error when saving DS template
 -issue#5392: Template import should not end with php error
 -issue#5403: Cacti Log regular expression filters can not calculate 'does not match' properly
+-issue#5413: Rows Per Page - Not all options are available
+-issue#5414: Plugins are unable to modify fields in the setting 'Change Device Settings'
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature#5393: Add template for SNMP printer
 -feature: Update Cisco Device Template to include HSRP graph template
